<resources>
    <string name="action_settings">Paramètres</string>
    <string name="action_logout">Déconnexion</string>
    <string name="action_login">Se connecter</string>
    <string name="action_language">Langue</string>
    <string name="drawer_title">Menu</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="contact_creation_failed">Echec de la création du contact</string>
    <string name="cannot_open_file">Aucune application ne peut ouvrir ce fichier</string>
    <string name="logout_confirmation">Êtes-vous sûr de vouloir vous déconnecter?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="lang_title">Changement de langue</string>
    <string name="lang_description">Utilisez ce menu pour choisir la langue de l\'application.
        Les langues disponibles sont l\'anglais et le français</string>
    <string name="lang_choix_positif">Français</string>
    <string name="lang_choix_negatif">Anglais</string>
    <string name="menu_section_1_moi">Moi</string>
    <string name="menu_section_1_ajd">Aujourd\'hui</string>
    <string name="menu_section_1_horaire">Horaire</string>
    <string name="menu_section_1_notes">Notes</string>
    <string name="menu_section_1_stages">Stages</string>
    <string name="menu_section_1_profil">Profil</string>
    <string name="menu_section_1_monETS">MonETS</string>
    <string name="menu_section_1_bandwith">Bande passante</string>
    <string name="menu_section_2_ets">ÉTS</string>
    <string name="menu_section_2_news">Nouvelles</string>
    <string name="menu_section_2_events">Événements</string>
    <string name="menu_section_2_bottin">Bottin</string>
    <string name="menu_section_2_biblio">Bibliothèque</string>
    <string name="menu_section_2_moodle">Moodle</string>
    <string name="menu_section_2_radio">Radio</string>
    <string name="menu_section_2_securite">Sécurité</string>
    <string name="menu_section_3_applets">ApplETS</string>
    <string name="menu_section_3_comms">Problème ou commentaire?</string>
    <string name="menu_section_3_about">À propos d\'ÉTSMobile</string>
    <string name="menu_section_3_sponsors">Nos partenaires</string>
    <string name="menu_section_3_apps">Nos réalisations</string>
    <string name="menu_section_3_faq">FAQ</string>
    <string name="menu_section_3_beta">Version bêta</string>
    <string name="toast_Connection_Required">Une connexion internet est requise pour télécharger le bottin</string>
    <string name="dialog_Loading_Directory">Chargement du bottin en cours</string>
    <string name="menu_bottin_refresh">Recharger le bottin</string>
    <string name="bottin_refresh_text">Le bottin va être supprimé puis téléchargé à nouveau.\nÊtes-vous sûr de votre choix ?</string>
    <string name="bottin_search_hint">Recherche…</string>
    <string name="bottin_add_contact">Ajouter aux contacts</string>
    <string name="activity_moodle_titre">Instructions Moodle</string>
    <string name="activity_moodle_url_text">Url du site à inscrire:</string>
    <string name="activity_moodle_nom">Nom d\'utilisateur</string>
    <string name="activity_moodle_code_universelle">Votre code Universel</string>
    <string name="activity_moodle_pwd">Mot de passe</string>
    <string name="activity_moodle_pwd_instruc">Votre mot de passe universitaire</string>
    <string name="activity_moodle_app">Moodle App</string>
    <string name="applets_about">ÉTSMobile a été réalisée par le club scientifique App|ETS de l\'École de technologie supérieure.\n\nApp|ETS se veut, avant tout, un regroupement d’étudiants qui partagent un intérêt commun pour le domaine des télécommunications et des applications mobiles.
        La mission d\'App|ETS est de former les étudiants au développement mobile et de promouvoir la production d\'applications mobiles au sein de la communauté étudiante.\n\nPour en savoir plus, n\'hésitez pas à consulter notre site web : \n\nhttp://clubapplets.ca\n\nLes contributions à l\'application sont ouvertes, venez faire un tour sur le dépôt github :\nhttp://github.com/ApplETS/ETSMobile-Android2</string>
    <string name="applets_ens_etsmtl_ca">applets@ens.etsmtl.ca</string>
    <string name="etsmobile_android_commentaire">ETSMobile-Android : Commentaire</string>
    <string name="default_comment"></string>
    <string name="moodle_assignments_title">Devoirs</string>
    <string name="moodle_assignments_description">Accédez à vos devoirs à l\'aide de ce bouton</string>
    <string name="moodle_past_assignments_filter">Filtrer</string>
    <string name="moodle_past_assignments">Devoirs antérieurs</string>
    <string name="moodle_past_assignments_sort">Trier</string>
    <string name="moodle_past_assignments_sort_date">Trier par date</string>
    <string name="moodle_past_assignments_sort_alpha">Trier par ordre alphabétique</string>
    <string name="moodle_assignment_due_date">Date d\'échéance : %s</string>
    <string name="moodle_assignment_team_submission">Remise en équipe</string>
    <string name="moodle_prevent_submission_not_in_group">Remise en équipe : %s</string>
    <string name="moodle_assignment_team_require_all_team_member_submit">Remise requise pour chaque membre : %s</string>
    <string name="moodle_assignment_grade">Note : %s</string>
    <string name="moodle_assignment_status_submitted">Statut : Remis</string>
    <string name="moodle_assignment_status_not_submitted">Statut : Non remis</string>
    <string name="moodle_assignment_status_late">Statut : En retard</string>
    <string name="moodle_assignment_grading_status_graded">Statut de l\'évaluation : Évalué</string>
    <string name="moodle_assignment_grading_status_not_graded">Statut de l\'évaluation : Non évalué</string>
    <string name="moodle_assignment_grader">Évaluateur : %s</string>
    <string name="moodle_assignment_comments">Commentaires : %s</string>
    <string name="moodle_assignment_none">Aucun devoir</string>
    <string name="moodle_error_connection_failure">Échec de la connexion</string>
    <string name="moodle_error_cant_get_token">Échec de l\'obtention du jeton</string>
    <string name="moodle_error_cant_get_profile">Échec de l\'obtention du profil</string>
    <string name="moodle_error_cant_get_courses">Échec de l\'obtention des cours</string>
    <string name="moodle_allow_storage_permissions">Veuillez accorder l\'utilisation du disque pour le téléchargement de ce fichier.</string>
    <string name="desc_radio">Radio Piranha, la radio étudiante de l\'ÉTS.</string>
    <string name="listing">Écouter</string>
    <string name="mesCours">Mes cours</string>
    <string name="sommaire">Sommaire</string>
    <string name="mesNotes">Mes notes</string>
    <string name="cote">Cote</string>
    <string name="noteACejour">Note à ce jour</string>
    <string name="moyenne">Moyenne</string>
    <string name="ecartType">Écart-type</string>
    <string name="mediane">Médiane</string>
    <string name="rangCentile">Rang centile</string>
    <string name="ponderation">Pondération</string>
    <string name="noteOnPourcent">%1$s/%2$s (%3$s%%)</string>
    <string name="toast_Sync_Fail">La synchronisation a échoué.</string>
    <string name="notes_details_sigle_groupe">%1$s - %2$s</string>
    <string name="profil_nom_prenom">Nom, Prénom</string>
    <string name="profil_code_permanent">Code permanent</string>
    <string name="profil_solde">Solde</string>
    <string name="profil_programme">Programme</string>
    <string name="profil_credit_reussis">Crédits réussis</string>
    <string name="profil_cours_reussis">Cours réussis</string>
    <string name="profil_cours_echoue">Cours échoué(s)</string>
    <string name="profil_credit_inscrit">Crédits inscrits</string>
    <string name="profil_moyenne">Moyenne</string>
    <string name="profil_logout">Déconnexion</string>
    <string name="profil_credit_potentiel">Crédits potentiels</string>
    <string name="profil_cours_equivalent">Cours équivalents</string>
    <string name="bandwidth_phase">Phase</string>
    <string name="bandwidth_app">App</string>
    <string name="bandwidth_chambre">Chambre</string>
    <string name="_0">0</string>
    <string name="utilise">Restant :</string>
    <string name="gigaoctetx">Go</string>
    <string name="error_invalid_app">Erreur appartement invalide</string>
    <string name="error_invalid_phase">Erreur phase invalide</string>
    <string name="bandwidth_used">Bande passante consommée: %1$.2f/%2$.0f %3$s</string>
    <string name="bandwidth_phase_3_msg">
        <![CDATA[Si vous habitez la phase 3, vous devez contacter Cooptel avec les renseignements
        suivants pourqu\'ils puissent vous donner accès à votre consommation :
        <ul>
            <li>Votre numéro d’appartement</li>
            <li>Le numéro de la phase où se situe votre appartement<li>
            <li>La lettre correspondant à votre chambre<li>
            <li>L’adresse MAC de votre équipement qui est connecté directement à internet (si vous
            avez un routeur, c’est celle du routeur) ou l’adresse IP publique que vous avez obtenue
            et l’heure à laquelle vous l’avez obtenu<li>
         </ul>]]>
    </string>
    <string name="cooptel_phone_number">1 866–532–2252</string>
    <string name="cooptel_email_address">support@cooptel.ca</string>
    <string-array name="bandwidth_phases">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="secu_title1">Joindre la sécurité</string>
    <string name="secu_phone_lbl">514–396–8900</string>
    <string name="secu_title2">Procédures d\'urgence</string>
    <string name="secu_appel_lbl">Appel d\'urgence</string>
    <string name="secu_ext_lbl">À l\'interne</string>
    <string name="secu_ext">Poste 55</string>
    <string name="secu_title">Sécurité</string>
    <string name="welcome">Bienvenue!</string>
    <string name="Aujourdhui">Ajd.</string>
    <string name="voirPDF">Voir PDF</string>
    <string-array name="secu_urgence">
        <item>Appel à la bombe</item>
        <item>Colis suspect</item>
        <item>Incendie</item>
        <item>Odeur suspecte</item>
        <item>Panne d\'ascenseur</item>
        <item>Panne électrique</item>
        <item>Personne armée</item>
        <item>Urgence médicale</item>
    </string-array>
    <string name="appel_d_apos_urgence">Appel d\'urgence</string>
    <string name="default_error_message">Error Message</string>
    <string name="error_JSON_PARSING">Erreur lors de la récupération des données.</string>
    <string name="today_url_format">http://api.clubapplets.ca/signets/card/login?id=1</string>
    <string name="error_loading_profile">Error loading profile</string>
    <string name="lundi_le_26_avril">Lundi le 26 Avril</string>
    <string name="menu_botin_search_title">search</string>
    <string name="categories">Catégories</string>
    <string name="title_activity_moodle_course">Moodle</string>
    <string name="title_activity_news_details">Nouvelles</string>
    <string name="title_activity_bottin_details">Bottin</string>
    <string name="title_activity_notes_details">Notes</string>
    <string name="today_course">Mes cours</string>
    <string name="today_no_classes">Pas de cours aujourd\'hui.</string>
    <string name="today_event">Événement</string>
    <string name="horaire">Horaire du %1$s %2$s %3$s</string>
    <string name="date_text">%1$s %2$s %3$s</string>
    <string name="export_calendar">Exporter</string>
    <string name="semester_progression">Progression de la session : %1$d/%2$d jours</string>
    <string name="toast_Calendar_Update_Error">Une erreur est survenue lors de la mise à jour du calendrier.</string>
    <string name="legend">Légende</string>
    <string name="legend_cours">Cours</string>
    <string name="legend_final_exam">Examen final</string>
    <string name="profil_code_universel">Code universel</string>
</resources>