<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_moodle_sort_assignments"
        android:title="@string/moodle_past_assignments_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_item_moodle_sort_assignments_date"
                    android:title="@string/moodle_past_assignments_sort_date"
                    android:icon="@drawable/ic_date_range_black_24dp"
                    android:checked="true"
                    android:orderInCategory="0"/>
                <item
                    android:id="@+id/menu_item_moodle_sort_assignments_alpha"
                    android:title="@string/moodle_past_assignments_sort_alpha"
                    android:icon="@drawable/ic_sort_by_alpha_black_24dp"
                    android:orderInCategory="1"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menu_item_moodle_previous_assignments"
        android:checkable="true"
        android:title="@string/moodle_past_assignments"
        app:showAsAction="never" />
</menu>