<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/secu_list_header_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtJoindreSecurite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:padding="10dp"
        android:text="@string/secu_title1"
        android:textAllCaps="true"
        android:textColor="@color/black_gray"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/infoSecurite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/secu_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/secu_appel_lbl"
                android:gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/secu_list_header_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:autoLink="phone"
                android:gravity="center_vertical|right"
                android:linksClickable="true"
                android:text="@string/secu_phone_lbl"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:drawableRight="@drawable/ic_device_access_call"
                android:textColor="@color/blue_ets" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/secu_ext_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/secu_ext_lbl"
                android:gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/bandwith_max"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="@string/secu_ext"
                android:paddingRight="42dp"
                android:gravity="center_vertical|right"
                android:textColor="@color/medium_gray"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
       	android:padding="10dp"
        android:background="@color/gray"
        android:textAllCaps="true"
        android:textColor="@color/black_gray"
        android:text="@string/secu_title2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

</LinearLayout>
