<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="4dp"
    android:paddingStart="4dp"
    android:paddingRight="4dp"
    android:paddingEnd="4dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/profil_nom_prenom_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start"
            android:text="@string/profil_nom_prenom"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profil_nom_prenom_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="16sp"
            tools:text="Papineau, Louis-Joseph" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/profil_code_universel_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start"
            android:text="@string/profil_code_universel"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profil_code_universel_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="16sp"
            tools:text="AA00000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/profil_code_permanent_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start"
            android:text="@string/profil_code_permanent"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profil_code_permanent_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="16sp"
            tools:text="PAPL01234567" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/profil_solde_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start"
            android:text="@string/profil_solde"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profil_solde_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="16sp"
            tools:text="800,00$" />
    </LinearLayout>



</LinearLayout>