<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="4dp"
    android:paddingRight="4dp">

    <Spinner
        android:id="@+id/spinner_programmes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="4dp"
        android:paddingStart="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/profil_moyenne_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start"
                android:text="@string/profil_moyenne"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profil_moyenne_item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="16sp"
                tools:text="3,7/4,3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/profil_credit_reussis_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start"
                android:text="@string/profil_credit_reussis"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profil_credit_reussis_item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="16sp"
                tools:text="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/profil_credit_inscrit_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start"
                android:text="@string/profil_credit_inscrit"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profil_credit_inscrit_item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="16sp"
                tools:text="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/profil_cours_reussis_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start"
                android:text="@string/profil_cours_reussis"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profil_cours_reussis_item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="16sp"
                tools:text="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/profil_cours_equivalent_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start"
                android:text="@string/profil_cours_equivalent"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profil_cours_equivalent_item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="16sp"
                tools:text="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/profil_credit_echoue_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start"
                android:text="@string/profil_cours_echoue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profil_credit_echoue_item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="16sp"
                tools:text="0" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>